# ccxt-pandas

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STABILITY.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/: README.md  add-exchange-parser.md  add-supported-method.md  ccxt-pandas-helper.md  regenerate-typed-stubs.md  release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
binder/: requirements.txt
ccxt_pandas/: __init__.py  exceptions.py  utils.py
ccxt_pandas/calculations/: README.md  __init__.py  delta.py  orderbook.py  precision.py  trades.py
ccxt_pandas/utils/: _generate_typed_interface.py  async_ccxt_pandas_exchange_typed.py  ccxt_pandas_exchange_typed.py  pandas_utils.py  utils.py
ccxt_pandas/wrappers/: async_ccxt_pandas_exchange.py  async_ccxt_pandas_multi_account.py  async_ccxt_pandas_multi_exchange.py  base_processor.py  ccxt_pandas_exchange.py  ccxt_pandas_multi_account.py  ccxt_pandas_multi_exchange.py  exchange_parsers.py  field_type_mappings.py  method_mappings.py  models.py
ccxt_pandas/wrappers/schemas/: __init__.py  accounts_schema.py  addresses_schema.py  balance_schema.py  base_schemas.py  bids_asks_schema.py  borrow_interest_schema.py  borrow_rates_schema.py  closed_orders_schema.py  cross_borrow_rates_schema.py  currency_schema.py  deposit_addresses_schema.py  deposit_withdraw_fees_schema.py  deposits_withdrawals_schema.py  funding_history_schema.py  funding_intervals_schema.py  funding_rate_history_schema.py  funding_rate_schema.py  greeks_schema.py  isolated_borrow_rates_schema.py  last_prices_schema.py  ledger_schema.py  leverages_schema.py  liquidations_schema.py  long_short_ratio_schema.py  margins_balance_schema.py  mark_prices_schema.py  market_schema.py  my_trades_schema.py  ohlcv_schema.py  open_interest_history_schema.py  open_orders_schema.py  order_book_schema.py  order_schema.py  orderbook_schema.py  orders_schema.py  portfolio_details_schema.py  portfolios_schema.py  positions_adl_rank_schema.py  positions_history_schema.py  (+7 more)
ccxt_pandas_explorer/: __init__.py  app.py  cli.py
ccxt_pandas_mcp/: __init__.py  _helpers.py  config.py  exchange_manager.py  serialization.py  server.py
ccxt_pandas_mcp/resources/: __init__.py  exchange_resources.py
ccxt_pandas_mcp/tools/: __init__.py  account.py  calculations.py  exchange_info.py  implicit.py  market_data.py  okx_grid.py  trading.py
docs/: requirements.txt
docs/source/: about.rst  api.rst  conf.py  dataframes.md  examples.rst  explorer.md  getting-started.md  index.rst  mcp-server.md
docs/source/_static/: default-dark.js
examples/: 00_sync_basics.ipynb  00_sync_basics.py  01_spot_future_swap_price_volume_analysis.ipynb  01_spot_future_swap_price_volume_analysis.py  02_exchange_arbitrage.ipynb  02_exchange_arbitrage.py  03_fetch_private_data.ipynb  03_fetch_private_data.py  04_plot_trades.ipynb  04_plot_trades.py  05_plot_orderbook_depth.ipynb  05_plot_orderbook_depth.py  06_calculate_orderbook_vwaps.ipynb  06_calculate_orderbook_vwaps.py  07_market_making_orders.ipynb  07_market_making_orders.py  08_pricing_coin_quoted_symbols.ipynb  08_pricing_coin_quoted_symbols.py  09_deposits_withdrawals.ipynb  09_deposits_withdrawals.py  10_websockets_listen_liquidations.py  11_fetch_volatility_history.ipynb  11_fetch_volatility_history.py  12_options_strategy_around_event.ipynb  12_options_strategy_around_event.py  13_delta_position.ipynb  13_delta_position.py  14_send_orders_via_websockets.py  15_open_interest_history.ipynb  15_open_interest_history.py  16_load_1000_ohlcv_async.py  17_load_symbols_all_exchanges_async.py  18_cheapest_withdrawal_route.ipynb  18_cheapest_withdrawal_route.py  19_multi_exchange_greeks.ipynb  19_multi_exchange_greeks.py  20_caching_repeat_fetches.ipynb  20_caching_repeat_fetches.py  jupytext.toml
tests/: conftest.py  test_async.py  test_calculations.py  test_ext_async.py  test_ext_sync.py  test_mcp_server.py  test_mocked_http.py  test_multi_account_async.py  test_multi_account_sync.py  test_multi_exchange_async.py  test_multi_exchange_sync.py  test_schemas_hypothesis.py  test_sync.py  test_websockets.py
tests/integration/: conftest.py  test_async_live.py  test_multi_account_sync_live.py  test_multi_exchange_async_live.py  test_order_lifecycle_async.py  test_order_lifecycle_sync.py  test_sync_live.py  test_websockets_live.py
