[project]
name = "ccxt-pandas"
version = "0.13.2"
description = "Library combining the power of CCXT with Pandas."
authors = [
    {name = "Sigma Quantiphi", email = "contact@sqphi.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["ccxt", "pandas", "cryptocurrency", "trading", "exchange", "dataframe"]
dependencies = [
    "aiodns>=3.5.0,<4.0.0",
    "coincurve>=20.0.0",
    "async-lru>=2.0.0,<3.0.0",
    "cachetools>=6.0.0,<7.0.0",
    "ccxt>=4.5.0,<5.0.0",
    "pandas[computation,output-formatting,parquet,performance]>=2.2.3,<4.0.0",
    "pandera>=0.29.0,<1.0.0",
    "orjson>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0,<3.0.0"
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3,<9.0.0",
    "furo>=2024.8.6,<2025.0.0",
]

[project.urls]
homepage = "https://github.com/sigma-quantiphi/ccxt-pandas"
repository = "https://github.com/sigma-quantiphi/ccxt-pandas"
documentation = "https://github.com/sigma-quantiphi/ccxt-pandas"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccxt_pandas"]
